[package]
name = "rust_voltorb_flip"
version = "0.1.0"
authors = ["Tobs40 <tobias.voelk@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "0.3"
rayon = "1.5"
fltk = "^1.1"
dashmap = "4.0"
crossbeam-channel = "0.5.1"
tinyvec = "1.3.1"

[profile.release]
lto = 'fat'
codegen-units = 1
opt-level = 3
debug = 2
panic = "abort"